# macos_security

./: 404.html  README.md  astro.config.mjs  index.html  pyproject.toml  requirements.txt  sitemap-0.xml
.github/workflows/: bump-build.yml  generate_baselines_bump_build.yml  spellcheck.yml
_astro/: common.BC6LGHV1.css
baselines/: 800-53r5_high.yaml  800-53r5_low.yaml  800-53r5_moderate.yaml
baselines/baseline-file-layout/: index.html
baselines/how-to-generate-baselines/: index.html
baselines/tailoring-a-baseline/: index.html
baselines/what-are-baselines/: index.html
compliance-scripts/compliance-script-layout/: index.html
compliance-scripts/how-to-generate-compliance-scripts/: index.html
compliance-scripts/what-are-compliance-scripts/: index.html
config/includes/: mscp-data.yaml
configuration-profiles/configuration-profile-layout/: index.html
configuration-profiles/how-to-generate-configuration-profiles/: index.html
configuration-profiles/what-are-configuration-profiles/: index.html
ddm-components/ddm-component-layout/: index.html
ddm-components/how-to-generate-ddm-components/: index.html
ddm-components/what-is-ddm/: index.html
docs/public/: nist-header-footer.js
guidance/guidance-file-example/: index.html
guidance/how-to-generate-guidance/: index.html
guidance/what-is-guidance/: index.html
more-information/additional-documents/: index.html
more-information/contributing/: index.html
pagefind/: pagefind-entry.json  pagefind.en_7d92fe2528.pf_meta  pagefind.en_e6cdfb7065.pf_meta  pagefind.en_edb6ea7efd.pf_meta
scripts/: validate_rules.py
src/mscp/: cli.py
(+111 files in other folders)
